--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-ui></app-ui>
+<app-ui>
+
+  <app-header class="header"></app-header>
+  <app-nav class="nav"></app-nav>
+  <div class="content">contenu de mes pages</div>
+  <app-footer class="footer"></app-footer>
+
+</app-ui>
