--- a/src/app/ui/components/ui/ui.component.html
+++ b/src/app/ui/components/ui/ui.component.html
@@ -1,8 +1,7 @@
 <header class="fixed-top">
   <app-icon-nav *ngIf="!open" (click)="toggle()"></app-icon-nav>
   <app-icon-close *ngIf="open" (click)="toggle()"></app-icon-close>
-  <!-- <ng-content select=".header"></ng-content> -->
-  header contents
+  <ng-content select=".header"></ng-content>
 </header>
 <main  [ngClass]="{'close-aside': !open}">
 
@@ -12,21 +11,18 @@
 
   <aside>
     <div class="scroller">
-      <!-- <ng-content select=".nav"></ng-content> -->
-      nav contents
+      <ng-content select=".nav"></ng-content>
     </div>
   </aside>
 
   <div class="page">
 
     <div class="contents">
-      <!-- <ng-content select=".content"></ng-content> -->
-      pages contents
+      <ng-content select=".content"></ng-content>
     </div>
 
     <footer>
-      <!-- <ng-content select=".footer"></ng-content> -->
-      footer contents
+      <ng-content select=".footer"></ng-content>
     </footer>
 
   </div>
