router and lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 
   <app-header class="header"></app-header>
   <app-nav class="nav"></app-nav>
-  <div class="content">contenu de mes pages</div>
+  <router-outlet class="content"></router-outlet>
   <app-footer class="footer"></app-footer>
 
 </app-ui>
+
