--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,11 +1,11 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link" href="#">Login</a>
+    <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Orders</a>
+    <a class="nav-link" routerLink="/orders" routerLinkActive="active">Orders</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Clients</a>
+    <a class="nav-link" routerLink="/clients" routerLinkActive="active">Clients</a>
   </li>
 </ul>
