--- a/src/app/orders/pages/page-orders/page-orders.component.html
+++ b/src/app/orders/pages/page-orders/page-orders.component.html
@@ -1,1 +1,21 @@
-<p>page-orders works!</p>
+<app-template-one-col>
+
+  <app-text-bandeau class="title">
+    <h1>All Orders</h1>
+  </app-text-bandeau>
+
+  <ng-container class="contents">
+    <app-table-light *ngIf="collection" [headers]="headers">
+      <tr *ngFor="let item of collection">
+        <td>{{ item.typePresta }}</td>
+        <td>{{ item.client }}</td>
+        <td>{{ item.nbJours }}</td>
+        <td>{{ item.tjmHt }}</td>
+        <td>total ht</td>
+        <td>total ttc</td>
+        <td>{{ item.state }}</td>
+      </tr>
+    </app-table-light>
+  </ng-container>
+
+</app-template-one-col>
