--- a/src/app/orders/pages/page-orders/page-orders.component.html
+++ b/src/app/orders/pages/page-orders/page-orders.component.html
@@ -14,7 +14,11 @@
         <td>{{ item.tjmHt | currency: 'EUR' }}</td>
         <td>{{ item.tjmHt | total: item.nbJours | currency: 'EUR' }}</td>
         <td>{{ item.tjmHt | total: item.nbJours: item.tva | currency: 'EUR' }}</td>
-        <td>{{ item.state }}</td>
+        <td [appState]="item.state">
+          <select (change)="changeState(item, $event)">
+            <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
+          </select>
+        </td>
       </tr>
     </app-table-light>
   </ng-container>
