:host-context with encapsulation

--- a/src/app/text/components/text-pages/text-pages.component.scss
+++ b/src/app/text/components/text-pages/text-pages.component.scss
@@ -20,19 +20,14 @@ app-text-pages {
   }
 }
 // colors
-// app-text {
-//   .white {
-//     h1 {
-//       color: $light-color;
-//     }
-//     h2 {
-//       color: $light-color;
-//     }
-//     h3 {
-//       color: $light-color;
-//     }
-//     p, a, span, li {
-//       color: $light-color
-//     }
-//   }
-// }
+.theme2 app-text-pages {
+  h1 {
+    color: $color2;
+  }
+  h2 {
+    color: $color2;
+  }
+  h3 {
+    color: $color2;
+  }
+}
