--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,4 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-// thanks to never write css here
+// thanks to never write css here or I kick you
