reactiveformsmodule and validators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-ui>
+<app-ui [ngClass]="{'theme2': theme === 'theme2'}">
 
   <app-header class="header"></app-header>
   <app-nav class="nav"></app-nav>
