--- a/src/app/clients/pages/page-clients/page-clients.component.html
+++ b/src/app/clients/pages/page-clients/page-clients.component.html
@@ -1,1 +1,27 @@
-<p>page-clients works!</p>
+<app-template-one-col>
+
+  <app-text-bandeau class="title">
+    <h1>All Clients</h1>
+  </app-text-bandeau>
+
+  <ng-container class="contents">
+    <!-- {{ collection | json }} -->
+    <app-table-light *ngIf="collection" [headers]="headers">
+      <tr *ngFor="let item of collection">
+        <td>{{ item.name }}</td>
+        <td>{{ item.totalCaHt }}</td>
+        <td>{{ item.tva }}</td>
+        <td>{{ item.totalCaHt | total: 1: item.tva | currency: 'EUR' }}</td>
+        <td [appState]="item.state">
+          <select (change)="changeState(item, $event)">
+            <option *ngFor="let state of states" [value]="state" [selected]="state === item.state">{{ state }}</option>
+          </select>
+        </td>
+      </tr>
+    </app-table-light>
+
+    <app-button label="Add a client" route="add"></app-button>
+
+  </ng-container>
+
+</app-template-one-col>
