--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,1 +1,22 @@
+@import 'theme';
 
+:host {
+  width: 100%;
+}
+
+app-text-pages {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+span {
+  padding: 5px 10px;
+  &.state-theme1 {
+    background: $color1;
+  }
+  &.state-theme2 {
+    background: $color2;
+  }
+}
