--- a/src/app/orders/pages/page-orders/page-orders.component.html
+++ b/src/app/orders/pages/page-orders/page-orders.component.html
@@ -6,9 +6,12 @@
 
   <ng-container class="contents">
     <!-- {{ collection | json }} -->
-    <app-table-light *ngIf="collection" [headers]="headers">
+    <app-table-light *ngIf="collection$ | async as collection" [headers]="headers">
       <tr *ngFor="let item of collection">
-        <td><app-icon-edit (click)="goToEdit(item)"></app-icon-edit></td>
+        <td>
+          <app-icon-edit (click)="goToEdit(item)"></app-icon-edit>
+          <app-icon-delete (click)="delete(item)"></app-icon-delete>
+        </td>
         <td>{{ item.typePresta }}</td>
         <td>{{ item.client }}</td>
         <td>{{ item.nbJours }}</td>
